bk_ida/gobmkida/c1/get_last_player
/data/output_dir/patch/gobmk/ida/clang/O1/gobmk-clang-O1/get_last_player/src/engine/board.c:1486:8: error: use of undeclared identifier 'dword_9AAC1C'
return dword_9AAC1C[move_history_pointer]; 
       ^
1 error generated.
make: *** [/data/output_dir/patch/gobmk/ida/clang/O1/gobmk-clang-O1/get_last_player/src/obj/1/board.o] Error 1
